--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,6 +31,7 @@ subjects:
 - !lcsh 'Coyote'
 - !lcc 'SK'
 - !lcsh 'Wolf hunting'
+- GITenberg
 title: "Wolf and Coyote Trapping: An Up-to-Date Wolf Hunter's Guide\r\nGiving the\
   \ Most Successful Methods of Experienced \"Wolfers\" for Hunting and Trapping These\
   \ Animals, Also Gives Their Habits in Detail."
